--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #------------------------------------------------------------
 
 # Which carpentry is this ("swc", "dc", or "lc")?
-carpentry: "swc"
+carpentry: "lc"
 
 # Overall title for pages.
-title: "Workshop Title"
+title: "Library & Software Carpentry at Yale University Library"
 
 # Contact email address.
-email: lessons@software-carpentry.org
+email: joshua.dull@yale.edu
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
@@ -20,7 +20,7 @@ kind: "workshop"
 
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
-repository: <USERNAME>/<PROJECT>
+repository: YaleDHLab/2018-03-12-YUL
 
 # Sites.
 amy_site: "https://amy.software-carpentry.org/workshops"
@@ -32,8 +32,8 @@ swc_pages: "https://swcarpentry.github.io"
 template_repo: "https://github.com/swcarpentry/styles"
 example_repo: "https://github.com/swcarpentry/lesson-example"
 example_site: "https://swcarpentry.github.com/lesson-example"
-workshop_repo: "https://github.com/swcarpentry/workshop-template"
-workshop_site: "https://swcarpentry.github.io/workshop-template"
+workshop_repo: "https://github.com/YaleDHLab/2018-03-12-YUL"
+workshop_site: "YaleDHLab.github.io/2018-03-12-YUL"
 training_site: "https://swcarpentry.github.io/instructor-training"
 swc_installer: "https://github.com/swcarpentry/windows-installer/releases/download/v0.3/SWCarpentryInstaller.exe"
 
